--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,6 +29,7 @@
   * Fix typos in docs/burp_ca.txt.
   * Add 'export LANG=C' to the timer script, so that timer_arg days are always
     expected in English.
+  * Add config file option to turn syslog logging on/off.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
