--- a/manpages/burp_ca.8
+++ b/manpages/burp_ca.8
@@ -57,6 +57,9 @@ key size (default: 2048)
 .TP
 \fB\-a|--ca\fR \fB\fR
 ca name if different from name
+.TP
+\fB\-f|--dhfile\fR \fB<path>\fR
+generate a new dhfile
 .SH
 
 .SH BUGS
