--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -304,7 +304,7 @@ If this is set to 1, server_script_post will always be run. The default is 0, wh
 Path to autoupgrade directory from which upgrades are downloaded. The option can be left unset in order not to autoupgrade clients. Please see docs/autoupgrade.txt in the source package for more help with this option.
 .TP
 \fBca_conf=[path]\fR
-Path to CA configuration file. The CA configuration file will usually be /etc/burp/CA.cnf. The CA directory indicated by CA.cnf will usually be /etc/burp/CA. If ca_conf is set and the CA directory does not exist, the server will create and populate it. The paths indicated by ssl_cert_ca, ssl_cert and ssl_key will be overwritten symlinks to the generated files in /etc/burp/CA.
+Path to certificate authority configuration file. The CA configuration file will usually be /etc/burp/CA.cnf. The CA directory indicated by CA.cnf will usually be /etc/burp/CA. If ca_conf is set and the CA directory does not exist, the server will create, populate it, and the paths indicated by ssl_cert_ca, ssl_cert, ssl_key and ssl_dhfile will be overwritten.
 .TP
 \fBca_name=[path]\fR
 Name of the CA that the server will generate when using the ca_conf option.
