--- a/CHANGELOG
+++ b/CHANGELOG
@@ -32,6 +32,10 @@
   * Add config file option to turn syslog logging on/off.
   * Add options for the server to automatically run burp_ca and populate the
     CA directory if the CA directory does not exist.
+  * Add options for the client to automatically generate a certificate signing
+    request, have the server sign and return it, and have the client use the
+    new certificate. Remove old default SSL certificates because they should
+    no longer be needed.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
