--- a/CHANGELOG
+++ b/CHANGELOG
@@ -36,6 +36,7 @@
     request, have the server sign and return it, and have the client use the
     new certificate. Remove old default SSL certificates because they should
     no longer be needed.
+  * Bug fix for 'compression = gzip[0-9]'.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
