Add -g option for the server, which makes it generate the server CA stuff and then exit (useful for the test script).

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -26,6 +26,9 @@ exit. This is useful for debugging. Implies '-F'.
 \fB\-F\fR \fB\fR
 Foreground mode. The server will fork into the background and run as a daemon if you do not give this option.
 .TP
+\fB\-g\fR \fB\fR
+Generate initial CA keys and certificates, and then exit.
+.TP
 \fB\-i\fR \fB\fR
 Print an index table of symbols that humans may see burp produce, and exit.
 .TP
