--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,12 @@
-burp (1.3.2-4) unstable; urgency=low
-
-  * In progress version for Equiinet.
-
- -- Graham Keeling <keeling@spamcop.net>  Wed, 07 Mar 2012 14:00:00 +0000
-
 burp (1.3.2-1) unstable; urgency=low
 
   * New upstream release version 1.3.2
   * Fixed make error during build process
+  * In progress version for Equiinet.
+  * Fixed compression directive not fully functional only numeric value allowed Debian bug: (Closes: #665843)
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Mon, 27 Feb 2012 16:03:20 +0100
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Wed, 28 Mar 2012 09:16:00 +0100
 
 burp (1.3.1-1) unstable; urgency=low
 
