--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Bug fix for Windows backups where it had stopped using the Windows backup
+    API in 1.3.2.
+
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
     request, have the server sign and return it, and have the client use the
