--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
   * Bug fix for Windows backups where it had stopped using the Windows backup
     API in 1.3.2.
+  * Automatically convert backslashes to forward slashes for includes/excludes
+    on Windows clients.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
