--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
     API in 1.3.2.
   * Automatically convert backslashes to forward slashes for includes/excludes
     on Windows clients.
+  * Bug fix: pass the path to the CA conf file whenever running burp_ca (fixes
+    problems with the test scripts).
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
