--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
     on Windows clients.
   * Bug fix: pass the path to the CA conf file whenever running burp_ca (fixes
     problems with the test scripts).
+  * Remove whitespace that was causing the burp_ca '--crl' option not to work.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
