--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@
     problems with the test scripts).
   * Remove whitespace that was causing the burp_ca '--crl' option not to work.
   * Make 'make install' create the directory /etc/burp/CA.
+  * Make compile succeed when there is no libncurses library.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
