--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,10 +5,12 @@
   * Bug fix: pass the path to the CA conf file whenever running burp_ca (fixes
     problems with the test scripts).
   * Remove whitespace that was causing the burp_ca '--crl' option not to work.
-  * Make 'make install' create the directory /etc/burp/CA.
+  * Have separate CA directories for the client and server. Make 'make install'
+    create the directory /etc/burp/CA-client.
   * Make compile succeed when there is no libncurses library.
   * Add 'client_can_force_backup' option, defaulted to on. Turning it off means
     that only timed backups are allowed.
+  * Remove getopt from burp_ca, hopefully allowing it to work on Macs.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
