--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,7 @@
   * Add 'client_can_force_backup' option, defaulted to on. Turning it off means
     that only timed backups are allowed.
   * Remove getopt from burp_ca, hopefully allowing it to work on Macs.
+  * Make an unknown exclude_fs a non-fatal error.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
