--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,8 @@
     'client_can_restore' and 'client_can_verify' options.
   * Remove getopt from burp_ca, hopefully allowing it to work on Macs.
   * Make an unknown exclude_fs a non-fatal error.
+  * Add ability to trigger a backup on the server side by placing a file called
+    'backup' in the client's storage directory.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
