--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,6 +21,7 @@
   * Add 'notify_success_changes_only' option, which means that success
     notifications only get sent if there were new or changed files.
   * Added Ruben Kerkhof's fixes to my typos in the run_script() stuff. 
+  * For each file, store the compression setting in the manifest.
 
 2012-03-31 Changes in burp-1.3.2:
   * Add options for the client to automatically generate a certificate signing
