--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,7 +20,7 @@
     fifo options.
   * Add 'notify_success_changes_only' option, which means that success
     notifications only get sent if there were new or changed files.
-  * Added Ruben Kerkhof's fixes to my typos in the run_script() stuff. 
+  * Added Ruben Kerkhof's fixes to make run_script() work on OSX.
   * For each file, store the compression setting in the manifest.
 
 2012-03-31 Changes in burp-1.3.2:
