--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Add configure test for uthash.h. If it doesn't exist, use the uthash.h
+    included with the burp source.
+
 2012-04-27 Changes in burp-1.3.4:
   * Bug fix for Windows backups where it had stopped using the Windows backup
     API in 1.3.2.
