Set IPTOS_THROUGHPUT bulk packet flag for linux backups. Windows/mingw64 appears not to be able to do this.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,8 @@
   * Fix bug where file times were not getting set on Windows directories.
   * Remove openssl "can't open config file" warning when generating
     certificates on Windows.
+  * Set IPTOS_THROUGHPUT bulk packet flag for linux backups. Windows/mingw64
+    appears not to be able to do this.
 
 2012-04-27 Changes in burp-1.3.4:
   * Bug fix for Windows backups where it had stopped using the Windows backup
