--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2012-05-28 Changes in burp-1.3.6:
   * Store files in a directory structure like that of the original client.
   * Fix 'ERROR: Please use absolute include/exclude paths' when setting paths
     on the server side.
