--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+burp (1.3.6-1) UNRELEASED; urgency=low
+
+  * New upstream release version 1.3.6
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 12:45:58 +0200
 burp (1.3.4-2) unstable; urgency=low
 
   * Fixes building isues with hppa and powerpcspe and sparc64
