Fixes Manpages that  have unescaped - symbols. Closes isue #96

--- a/manpages/bedup.8
+++ b/manpages/bedup.8
@@ -38,7 +38,7 @@ Print version and exit.\fR
 .TP
 By default, bedup will read /etc/burp/burp.conf and deduplicate client storage directories using special knowledge of the structure.\fR
 .TP
-With '-n', this knowledge is turned off and you have to specify the directories to deduplicate on the command line. Running with '-n' is therefore dangerous if you are deduplicating burp storage directories.
+With '\-n', this knowledge is turned off and you have to specify the directories to deduplicate on the command line. Running with '\-n' is therefore dangerous if you are deduplicating burp storage directories.
 
 .SH BUGS
 If you find bugs, please report them to the email list. See the website
