--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -21,7 +21,7 @@ is /etc/burp/burp.conf.
 .TP
 \fB\-n\fR \fB\fR
 No forking mode. The program will accept a single query, deal with it, and then
-exit. This is useful for debugging. Implies '-F'.
+exit. This is useful for debugging. Implies '\-F'.
 .TP
 \fB\-F\fR \fB\fR
 Foreground mode. The server will fork into the background and run as a daemon if you do not give this option.
@@ -40,24 +40,24 @@ option in the config file. Use
 to deactivate or '' to reactivate output.
 .TP
 \fB\-a s\fR \fB\fR
-Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '-c' option. The live monitor requires ncurses support at compile time.
+Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '\-c' option. The live monitor requires ncurses support at compile time.
 .TP
 \fB\-a S\fR \fB\fR
-Similar to '-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '-a S', listed below. These enable logs and contents of backups to be listed whilst logged in on the server machine.
+Similar to '\-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '\-a S', listed below. These enable logs and contents of backups to be listed whilst logged in on the server machine.
 .TP
-ADDITIONAL SERVER OPTIONS TO USE WITH '-a S'
+ADDITIONAL SERVER OPTIONS TO USE WITH '\-a S'
 .TP
 \fB\-C\fR \fB[client]\fR
 Limit the output to a single client.
 .TP
 \fB\-b\fR \fB[number]\fR
-Show listable files in a particular backup (requires -C).
+Show listable files in a particular backup (requires \-C).
 .TP
 \fB\-z\fR \fB[file]\fR
-Dump a particular log file in a backup (requires -C and -b).
+Dump a particular log file in a backup (requires \-C and \-b).
 .TP
 \fB\-d\fR \fB[path]\fR
-Show a particular path in a backup (requires -C and -b).
+Show a particular path in a backup (requires \-C and \-b).
 
 .SH CLIENT OPTIONS
 .TP
@@ -95,57 +95,57 @@ option in the config file. Use
 to deactivate or '' to reactivate output.
 .TP
 \fB\-s\fR \fB[number]\fR
-For use with restores - strip a number of leading path components.
+For use with restores \- strip a number of leading path components.
 
 .SH EXAMPLES
 .TP
-\fBburp -a b\fR
+\fBburp \-a b\fR
 Runs a backup.
 .TP
-\fBburp -a l\fR
+\fBburp \-a l\fR
 Lists the available backups and dates.
 .TP
-\fBburp -a l -b 1\fR
+\fBburp \-a l \-b 1\fR
 Lists all the files in backup number 1.
 .TP
-\fBburp -a l -b 1 -l /dev/null\fR
+\fBburp \-a l \-b 1 \-l /dev/null\fR
 Lists all the files in backup number 1 without extra debug info.
 .TP
-\fBburp -a l -b a\fR
+\fBburp \-a l \-b a\fR
 Lists all the files in all the backups.
 .TP
-\fBburp -a l -b 1 -r myregex\fR
+\fBburp \-a l \-b 1 \-r myregex\fR
 Lists all the files in backup number 1 that match the regular expression 'myregex'.
 .TP
-\fBburp -a L -b 1 -r myregex\fR
-Long lists all the files in backup number 1 that match the regular expression 'myregex'. This is like doing an 'ls -l'.
+\fBburp \-a L \-b 1 \-r myregex\fR
+Long lists all the files in backup number 1 that match the regular expression 'myregex'. This is like doing an 'ls \-l'.
 .TP
-\fBburp -a r -b 1 -r myregex\fR
+\fBburp \-a r \-b 1 \-r myregex\fR
 Restores all the files in backup number 1 that match the regular expression 'myregex' back to their original location. You won't be given a warning if the files already exist there, so use with caution.
 .TP
-\fBburp -a r -b 1 -r myregex -d /tmp/restoredir\fR
+\fBburp \-a r \-b 1 \-r myregex \-d /tmp/restoredir\fR
 Restores all the files in backup number 1 that match the regular expression 'myregex' into the directory /tmp/restoredir.
 .TP
-\fBburp -a r -b 1 -r myregex -d /tmp/restoredir -s 2\fR
+\fBburp \-a r \-b 1 \-r myregex \-d /tmp/restoredir \-s 2\fR
 Restores all the files in backup number 1 that match the regular expression 'myregex' into the directory /tmp/restoredir and strip 2 leading path components.
 .TP
-\fBburp -a r\fR
+\fBburp \-a r\fR
 Restores all the files in the most recent backup to their original location. You won't be given a warning if the files already exist there, so use with caution.
 .TP
-\fBburp -a v\fR
+\fBburp \-a v\fR
 Verifies the most recent backup.
 .TP
-\fBburp -a v -b 1 -r myregex\fR
+\fBburp \-a v \-b 1 \-r myregex\fR
 Verifies everything in backup number 1 that matches the regular expression 'myregex'.
 .TP
-\fBburp -a t\fR
-Timed backup. The same as 'burp -a b', except that a script is run on the server before deciding to go ahead. The intention is that this command will be run on a repeating cron job with a short interval, and that the server will decide when it is time for a new backup.
+\fBburp \-a t\fR
+Timed backup. The same as 'burp \-a b', except that a script is run on the server before deciding to go ahead. The intention is that this command will be run on a repeating cron job with a short interval, and that the server will decide when it is time for a new backup.
 .TP
-\fBburp -a L -b 1 -d ''\fR
+\fBburp \-a L \-b 1 \-d ''\fR
 Long list the top level directory of backup 1.
 .TP
-\fBburp -a L -b 1 -d '/home/graham'\fR
-Long list the /home/graham directory of backup 1. These '-d' versions of the list function provide the ability to 'browse' backups.
+\fBburp \-a L \-b 1 \-d '/home/graham'\fR
+Long list the /home/graham directory of backup 1. These '\-d' versions of the list function provide the ability to 'browse' backups.
 
 .SH SERVER CONFIGURATION FILE OPTIONS
 
@@ -195,7 +195,7 @@ Log to syslog.
 .TP
 \fBkeep=[number]\fR
 Number of backups to keep. This can be overriddden by the client configuration
-files in clientconfdir on the server. Specify multiple 'keep' entries on separate lines in order to keep multiple periods of backups. For example, assuming that you are doing a backup a day, keep=7 keep=4 keep=6 (on separate lines) will keep 7 daily backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168) - roughly 6 monthly backups. Effectively, you will be guaranteed to be able to restore up to 168 days ago, with the number of available backups exponentially decreasing as you go back in time to that point. In this example, every 7th backup will be hardlinked to allow burp to safely delete intermediate backups when necessary. You can have as many 'keep' lines as you like, as long as they don't exceed 52560000 when multiplied together. That is, a backup every minute for 100 years.
+files in clientconfdir on the server. Specify multiple 'keep' entries on separate lines in order to keep multiple periods of backups. For example, assuming that you are doing a backup a day, keep=7 keep=4 keep=6 (on separate lines) will keep 7 daily backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168) \- roughly 6 monthly backups. Effectively, you will be guaranteed to be able to restore up to 168 days ago, with the number of available backups exponentially decreasing as you go back in time to that point. In this example, every 7th backup will be hardlinked to allow burp to safely delete intermediate backups when necessary. You can have as many 'keep' lines as you like, as long as they don't exceed 52560000 when multiplied together. That is, a backup every minute for 100 years.
 .TP
 \fBhardlinked_archive=[0|1]\fR
 On the server, defines whether to keep hardlinked files in the backups, or whether to generate reverse deltas and delete the original files. Can be set to either 0 (off) or 1 (on). Disadvantage: More disk space will be used Advantage: Restores will be faster, and since no reverse deltas need to be generated, the time and effort the server needs at the end of a backup is reduced.
@@ -238,16 +238,16 @@ on the server. Options are...
 \fBresume:\fR Simply continue the previous backup from the point at which it left off. NOTE: If the client has changed its include/exclude configuration since the backup was interrupted, the recovery method will automatically switch to 'use'.
 .TP
 \fBclient_can_force_backup=[0|1]\fR
-Turn this off to prevent clients from forcing backups with the '-a b' option. Timed backups will still work. The default is that clients can force backups.
+Turn this off to prevent clients from forcing backups with the '\-a b' option. Timed backups will still work. The default is that clients can force backups.
 .TP
 \fBclient_can_list=[0|1]\fR
-Turn this off to prevent clients from listing backups with the '-a l' option. The default is that clients can force backups.
+Turn this off to prevent clients from listing backups with the '\-a l' option. The default is that clients can force backups.
 .TP
 \fBclient_can_restore=[0|1]\fR
-Turn this off to prevent clients from initiating restores with the '-a r' option. The default is that clients can initiate restores.
+Turn this off to prevent clients from initiating restores with the '\-a r' option. The default is that clients can initiate restores.
 .TP
 \fBclient_can_verify=[0|1]\fR
-Turn this off to prevent clients from initiating a verify job with the '-a v' option. The default is that clients can initiate a verify job.
+Turn this off to prevent clients from initiating a verify job with the '\-a v' option. The default is that clients can initiate a verify job.
 .TP
 \fBssl_cert_ca=[path]\fR
 The path to the SSL CA certificate. This file will probably be the same on both the server and the client. The file should contain just the certificate in PEM format. For more information on this, and the other ssl_* options, please see docs/burp_ca.txt.
@@ -265,7 +265,7 @@ The SSL key password.
 Synonym for ssl_key_password.
 .TP
 \fBssl_dhfile=[path]\fR
-Path to Diffie-Hellman parameter file. To generate one with openssl, use a command like this: openssl dhparam -out dhfile.pem -5 1024
+Path to Diffie-Hellman parameter file. To generate one with openssl, use a command like this: openssl dhparam \-out dhfile.pem \-5 1024
 .TP
 \fBmax_children=[number]\fR
 Defines the number of child processes to fork (the number of clients that can simultaneously connect. The default is 5.
@@ -301,7 +301,7 @@ The same as notify_success_script, but for backups that failed.
 The same as notify_failure_arg, but for backups that failed.
 .TP
 \fBdedup_group=[string]\fR
-Enables you to group clients together for file deduplication purposes. For example, you might want to set 'dedup_group=xp' for each Windows XP client, and then run the bedup program on a cron job every other day with the option '-g xp'.
+Enables you to group clients together for file deduplication purposes. For example, you might want to set 'dedup_group=xp' for each Windows XP client, and then run the bedup program on a cron job every other day with the option '\-g xp'.
 .TP
 \fBserver_script_pre=[path]\fR
 Path to a script to run on the server after each successfully authenticated connection but before any work is carried out. The arguments to it are 'pre', '(client command)', 'reserved3' to 'reserved5', and then arguments defined by server_script_pre_arg. If the script returns non-zero, the task asked for by the client will not be run. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
@@ -515,7 +515,7 @@ The file name must match the name in the 'cname' field on the client.
 .TP
 \fBssl_peer_cn=[string]\fR must match the common name in the SSL certificate that the client gives when it connects. If ssl_peer_cn is not set, the client name will be used instead (the clientconfdir file name).
 .TP
-The file needs to contain a line like \fBpassword=[password]\fR that matches the same field on the client, or \fBpasswd=[encrypted password]\fR - where the plain text password on the client will be tested against an encrypted password of the kind you might find in /etc/passwd.
+The file needs to contain a line like \fBpassword=[password]\fR that matches the same field on the client, or \fBpasswd=[encrypted password]\fR \- where the plain text password on the client will be tested against an encrypted password of the kind you might find in /etc/passwd.
 .TP
 Additionally, the following options can be overridden here for each client:
 \fBdirectory\fR
@@ -577,19 +577,19 @@ You can queue a backup on the server, to be performed when the client next makes
 You can queue a restore on the server, to be performed when the client next makes contact. To do this, you put a file called 'restore' into the top level of the client storage directory. Valid fields to include in the restore file are:
 .TP
 \fBbackup=[number|a]\fR
-The number of the backup to restore from. Equivalent to '-b' when initiating a restore from the client.
+The number of the backup to restore from. Equivalent to '\-b' when initiating a restore from the client.
 .TP
 \fBoverwrite=[0|1]\fR
-Whether to overwrite existing files. Equivalent to '-f' when initiating a restore from the client.
+Whether to overwrite existing files. Equivalent to '\-f' when initiating a restore from the client.
 .TP
 \fBstrip=[number]\fR
-Number of leading path components to strip. Equivalent to '-s' when initiating a restore from the client.
+Number of leading path components to strip. Equivalent to '\-s' when initiating a restore from the client.
 .TP
 \fBrestoreprefix=[path]\fR
-Prefix to the restore path. Equivalent to '-d' when initiating a restore from the client.
+Prefix to the restore path. Equivalent to '\-d' when initiating a restore from the client.
 .TP
 \fBregex=[regular expression]\fR
-Only restore files matching the regular expression. Equivalent to '-r' when initiating a restore from the client.
+Only restore files matching the regular expression. Equivalent to '\-r' when initiating a restore from the client.
 .TP
 \fBinclude=[path]\fR
 Restore directories and files that match the path. If it is a directory, the contents of the directory will be restored. You can have multiple 'include' lines. There is no equivalent when initiating a restore from the client.
