--- a/manpages/burp_ca.8
+++ b/manpages/burp_ca.8
@@ -13,52 +13,52 @@ A script for generating certificates for use with burp. This script comes with t
 
 .SH OPTIONS
 .TP
-\fB\-h|--help\fR \fB\fR
+\fB\-h|\-\-help\fR \fB\fR
 show help
 .TP
-\fB\-i|--init\fR \fB\fR
+\fB\-i|\-\-init\fR \fB\fR
 inititalize CA
 .TP
-\fB\-k|--key\fR \fB\fR
+\fB\-k|\-\-key\fR \fB\fR
 generate new key
 .TP
-\fB\-r|--request \fR \fB\fR
+\fB\-r|-\-request \fR \fB\fR
 generate certificate sign request
 .TP
-\fB\-s|--sign\fR \fB\fR
-sign csr (use --ca <ca> and --name <name>)
+\fB\-s|\-\-sign\fR \fB\fR
+sign csr (use \-\-ca <ca> and \-\-name <name>)
 .IP
-\fB\--batch\fR \fB\fR
+\fB\-\-batch\fR \fB\fR
 do not prompt for anything
 .IP
-\fB\--revoke\fR \fB<number>\fR
+\fB\-\-revoke\fR \fB<number>\fR
 revoke certificate with serial number
 .IP
-\fB\--crl\fR \fB\fR
+\fB\-\-crl\fR \fB\fR
 generate certificate revoke list
 .TP
-\fB\-d|--dir\fR \fB<dir>\fR
+\fB\-d|\-\-dir\fR \fB<dir>\fR
 ca output dir (default: /etc/burp/CA)
 .TP
-\fB\-c|--config\fR \fB\fR
+\fB\-c|\-\-config\fR \fB\fR
 config file (default: /etc/burp/CA.cnf)
 .TP
-\fB\-n|--name\fR \fB\fR
+\fB\-n|\-\-name\fR \fB\fR
 name (default: builder)
 .TP
-\fB\-D|--days\fR \fB\fR
+\fB\-D|\-\-days\fR \fB\fR
 valid days for certificate (default in config file)
 .IP
-\fB\--ca_days\fR \fB\fR
+\fB\-\-ca_days\fR \fB\fR
 valid days for CA certificate (default: 3650)
 .TP
-\fB\-S|--size\fR \fB\fR
+\fB\-S|\-\-size\fR \fB\fR
 key size (default: 2048)
 .TP
-\fB\-a|--ca\fR \fB\fR
+\fB\-a|\-\-ca\fR \fB\fR
 ca name if different from name
 .TP
-\fB\-f|--dhfile\fR \fB<path>\fR
+\fB\-f|\-\-dhfile\fR \fB<path>\fR
 generate a new dhfile
 .SH
 
