--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -172,7 +172,7 @@ Whether to fork children. The default is 1.
 Path to the directory in which to store backups.
 .TP
 \fBdirectory_tree=[0|1]\fR
-When turned on (which is the default), the structure of the storage directory will mimic that of the original filesystem on the client.
+When turned on (which is the default) and the client is on version 1.3.6 or greater, the structure of the storage directory will mimic that of the original filesystem on the client.
 .TP
 \fBtimestamp_format=[strftime format]\fR
 This allows you to tweak the format of the timestamps of individual backups. See 'man strftime' to see available substitutions. If this option is unset, burp uses "%Y-%m-%d %H:%M:%S".
