--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2012-06-08 Changes in burp-1.3.8:
   * Fix bug introduced in the new storage directory structure stuff that had
     the potential to corrupt backups.
   * Force directory_tree = 0 for clients on less than version 1.3.6.
