--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+  * Fixed bug to do with directory_tree=1 that would stop resume working.
   * Stop status monitor exiting on terminal resize.
 
 2012-06-08 Changes in burp-1.3.8:
