--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -121,7 +121,7 @@ Lists all the files in backup number 1 that match the regular expression 'myrege
 Long lists all the files in backup number 1 that match the regular expression 'myregex'. This is like doing an 'ls \-l'.
 .TP
 \fBburp \-a r \-b 1 \-r myregex\fR
-Restores all the files in backup number 1 that match the regular expression 'myregex' back to their original location. You won't be given a warning if the files already exist there, so use with caution.
+Restores all the files in backup number 1 that match the regular expression 'myregex' back to their original location.
 .TP
 \fBburp \-a r \-b 1 \-r myregex \-d /tmp/restoredir\fR
 Restores all the files in backup number 1 that match the regular expression 'myregex' into the directory /tmp/restoredir.
@@ -130,7 +130,7 @@ Restores all the files in backup number 1 that match the regular expression 'myr
 Restores all the files in backup number 1 that match the regular expression 'myregex' into the directory /tmp/restoredir and strip 2 leading path components.
 .TP
 \fBburp \-a r\fR
-Restores all the files in the most recent backup to their original location. You won't be given a warning if the files already exist there, so use with caution.
+Restores all the files in the most recent backup to their original location.
 .TP
 \fBburp \-a v\fR
 Verifies the most recent backup.
