--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
   * Fixed bug to do with directory_tree=1 that would stop resume working.
   * Stop status monitor exiting on terminal resize.
   * Small man page corrections about overwriting existing files.
+  * Don't use mingw64's utime() to set Windows file times, because it doesn't
+    work on read-only files.
 
 2012-06-08 Changes in burp-1.3.8:
   * Fix bug introduced in the new storage directory structure stuff that had
