--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@
   * Small man page corrections about overwriting existing files.
   * Don't use mingw64's utime() to set Windows file times, because it doesn't
     work on read-only files.
+  * Tweak to timer_script to let it run with slightly older versions of 'date',
+    plus the FreeBSD version of 'date'.
 
 2012-06-08 Changes in burp-1.3.8:
   * Fix bug introduced in the new storage directory structure stuff that had
