--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@
     work on read-only files.
   * Tweak to timer_script to let it run with slightly older versions of 'date',
     plus the FreeBSD version of 'date'.
+  * "burp -a l" should say that a backup is finalising.
 
 2012-06-08 Changes in burp-1.3.8:
   * Fix bug introduced in the new storage directory structure stuff that had
