--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -241,7 +241,7 @@ on the server. Options are...
 Turn this off to prevent clients from forcing backups with the '\-a b' option. Timed backups will still work. The default is that clients can force backups.
 .TP
 \fBclient_can_list=[0|1]\fR
-Turn this off to prevent clients from listing backups with the '\-a l' option. The default is that clients can force backups.
+Turn this off to prevent clients from listing backups with the '\-a l' option. The default is that clients can list backups.
 .TP
 \fBclient_can_restore=[0|1]\fR
 Turn this off to prevent clients from initiating restores with the '\-a r' option. The default is that clients can initiate restores.
