--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -602,6 +602,9 @@ Restore directories and files that match the path. If it is a directory, the con
 .TP
 As a minimum, the 'restore' file needs to contain a 'backup' option, and one 'regex' or 'include' line.
 
+.SH SIGNALS
+Sending signal 1 (HUP) to the main server process will cause it to reload. For the vast majority of configuration changes, a reload is unnecessary as the server will pick up changes "on-the-fly". Sending signal 12 (USR2) to the main server process will cause it to wait until there are no longer any child processes, and then exit. The intention is to help with upgrades without interrupting current backups. if you are running upstart, a new burp server process will start up when the old one exits.
+
 .SH BUGS
 If you find bugs, please report them to the email list. See the website
 <http://burp.grke.net/> for details.
