Make librsync errors in phase4 non-fatal.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
   * Added pcre-8.31 to Windows.
   * Added Gonéri Le Bouder's exclude_regex option.
   * Add a gentle shutdown server option - send signal 12 to the main process.
+  * Make librsync errors in phase4 non-fatal.
 
 2012-06-08 Changes in burp-1.3.8:
   * Fix bug introduced in the new storage directory structure stuff that had
