--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * add_missing_return_in_non_void_function.patch from Suse.
+
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
   * Fixed bug to do with directory_tree=1 that would stop resume working.
