--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
   * Remove 'forward' timestamp references in backup directories, to allow the
     easier deletion of backup directories.
   * Add missing_return_in_non_void_function.patch from Suse.
+  * Further break down find_files() into smaller functions.
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
