--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
     easier deletion of backup directories.
   * Add missing_return_in_non_void_function.patch from Suse.
   * Further break down find_files() into smaller functions.
+  * Make sure behaviour is sensible when a client runs out of storage
+    directories.
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
