--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -70,7 +70,7 @@ backups.
 .TP
 \fB\-c\fR \fB[path]\fR
 Short for 'config file'. The argument is a path to the config file. The default
-is /etc/burp/burp.conf, or C:\\Program Files\\Burp\\burp.conf on Windows.
+is /etc/burp/burp.conf, or %PROGRAMFILES%\\Burp\\burp.conf on Windows.
 .TP
 \fB\-d\fR \fB[path]\fR
 Short for 'directory'. When restoring, the argument is a path to an alternative directory to restore to. When listing, the argument is the directory to list.
