--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@
   * Further break down find_files() into smaller functions.
   * Make sure behaviour is sensible when a client runs out of storage
     directories.
+  * On Windows, use PROGRAMFILES environment variable(s) instead of
+    C:/Program Files/Burp/.
+  * Stop the Windows installer writing/reading stuff to/from the registry and
+    the start menu.
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
