--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@
     C:/Program Files/Burp/.
   * Stop the Windows installer writing/reading stuff to/from the registry and
     the start menu.
+  * Allow the Windows installer options to be set on the Windows command line.
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
