--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,9 @@
   * Stop the Windows installer writing/reading stuff to/from the registry and
     the start menu.
   * Allow the Windows installer options to be set on the Windows command line.
+  * Add password_check=[0|1] to options on the server. Defaults to on. Turning
+    it off disables client password checks (although SSL certificates are still
+    checked).
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
