--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,7 @@
   * Add password_check=[0|1] to options on the server. Defaults to on. Turning
     it off disables client password checks (although SSL certificates are still
     checked).
+  * Count deleted files.
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
