--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
     it off disables client password checks (although SSL certificates are still
     checked).
   * Count deleted files.
+  * Remove unnecessary counter code.
 
 2012-07-28 Changes in burp-1.3.10:
   * Added Tony Cheneau's IPv6 fixes.
